Recording is somewhat working.