@@ -2,9 +2,11 @@ package studio.archetype.shutter.util;
 
 import studio.archetype.shutter.client.encoding.CommandProperty;
 
+import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.StringReader;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -25,7 +27,13 @@ public class CliUtils {
     public static int runCommand(String command, CommandProperty... properties) throws IOException, InterruptedException {
         final String cmd = command + " " + Stream.of(properties).map(CommandProperty::toString).collect(Collectors.joining(" "));
         System.out.println("Command: \"" + cmd + "\"");
-        return new ProcessBuilder(cmd).start().waitFor();
+        Process p = Runtime.getRuntime().exec(cmd);
+        int ret = p.waitFor();
+        BufferedReader reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
+        reader.lines().forEach(System.out::println);
+        reader.close();
+        p.destroy();
+        return ret;
     }
 
     public static CompletableFuture<Integer> runCommandAsync(String command, CommandProperty... properties) {
@@ -33,6 +41,7 @@ public class CliUtils {
             try {
                 return runCommand(command, properties);
             } catch (IOException | InterruptedException e) {
+                e.printStackTrace();
                 return -1;
             }
         });
